FLXX-12: add docs for form responses
